--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,9 @@
 
     <modules>
       <module>zookeeper</module>
+      <module>dubbo-api</module>
+      <module>dubbo-provider</module>
+      <module>dubbo-consumer</module>
     </modules>
 
     <dependencies>
