--- a/dubbo-consumer/src/main/resources/application.yml
+++ b/dubbo-consumer/src/main/resources/application.yml
@@ -8,5 +8,14 @@ spring:
 dubbo:
   application:
     name: dubbo-consumer
+  registry:
+    address: 127.0.0.1:2181
+    protocol: zookeeper
+    check: false
+  monitor:
+    protocol: register
+  consumer:
+    check: false
+    timeout: 3000
 server:
   port: 8687
