--- a/dubbo-provider/pom.xml
+++ b/dubbo-provider/pom.xml
@@ -37,6 +37,12 @@
             <version>5.1.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
