--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
       <module>dubbo-api</module>
       <module>dubbo-provider</module>
       <module>dubbo-consumer</module>
+        <module>redis</module>
     </modules>
 
     <dependencies>
