--- a/redis/src/main/resources/application.yml
+++ b/redis/src/main/resources/application.yml
@@ -1,1 +1,11 @@
-
+spring:
+  datasource:
+    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/mybatis?serverTimezone=GMT%2B8&useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&useSSL=false&allowPublicKeyRetrieval=true
+    username: root
+    password: root1234
+  redis:
+    host: 10.1.1.240
+    port: 6379
+    password:
