--- a/redis/src/main/resources/application.yml
+++ b/redis/src/main/resources/application.yml
@@ -9,3 +9,6 @@ spring:
     host: 10.1.1.240
     port: 6379
     password:
+mybatis-plus:
+  mapper-locations: classpath*:mapper/**/*.xml
+  type-aliases-package: com.xxj.redis.entity
